testing the circuits

--- a/circuits/package.json
+++ b/circuits/package.json
@@ -3,7 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "mocha"
+  },
   "dependencies": {
-    "circomlib": "^2.0.5"
+    "circom_tester": "^0.0.15",
+    "circomlib": "^2.0.5",
+    "mocha": "^10.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6"
   }
 }
